Fix for footer cutting off content on list page

--- a/public/content/app.css
+++ b/public/content/app.css
@@ -41,6 +41,11 @@ footer p {
     width: auto;
 }
 
+.bottomPad {
+    padding-bottom: 90px;
+}
+
+
 /*****This class is attached to the Confirmation warning since we did not use btn-danger
 If removed or commented, the 'Are You Sure' warning will break.
 Added dummy style to get rid of empty class warning
